# acore_soap_app-project

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.rst  poetry-lock-hash.json  pyproject.toml  pyproject_ops.json  release-history.rst  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: main.yml
acore_soap_app/: __init__.py  _version.py  api.py  exc.py  paths.py  utils.py
acore_soap_app/agent/: __init__.py  api.py  execute-command.xml  impl.py  soap_agent.py
acore_soap_app/cli/: __init__.py  impl.py  main.py
acore_soap_app/sdk/: __init__.py  api.py  canned.py  core.py  remote_command.py
acore_soap_app/sdk/canned/: api.py  impl.py
acore_soap_app/tests/: mock_aws.py
debug/: example.py  run_canned_command.py  run_remote_command.py  run_soap_command.py
docs/: Makefile  make.bat
docs/01/: index.rst  run-remote-command-architecture.drawio  run-remote-command-architecture.drawio.html
docs/01-Run-GM-Command-in-Game-Server-Console-Remotely/: index.rst  run-remote-command-architecture.drawio.html
docs/02-Agent-vs-SDK/: index.rst
docs/source/: conf.py
docs/source/01-Run-GM-Command-in-Game-Server-Console-Remotely/: index.rst  run-remote-command-architecture.drawio
docs/source/02-Agent-and-SDK/: index.rst
docs/source/03-Gadget/: index.rst
docs/source/acore_soap_app/: __init__.rst  api.rst  exc.rst  utils.rst
docs/source/acore_soap_app/agent/: __init__.rst  api.rst  impl.rst
docs/source/acore_soap_app/cli/: __init__.rst  impl.rst  main.rst
docs/source/acore_soap_app/sdk/: __init__.rst  api.rst  canned.rst  core.rst
docs/source/acore_soap_app/sdk/canned/: __init__.rst  api.rst  impl.rst
examples/: run_canned_command.py  run_remote_command.py  run_soap_command.py
loss_req/: requirements-test.txt  requirements.txt
tests/: all.py  test_api.py
tests/agent/: fail1_wrong_command.xml  fail2_account_not_exists.xml  success.xml  test_agent_impl.py
